--- a/_layouts/page_v2.html
+++ b/_layouts/page_v2.html
@@ -26,7 +26,7 @@
 					<!--get all sub section headers-->
             		{% assign arrSectionHeaders = arrSectionItems | where: "isHeader", "1" %}
             							
-						<a href="#{{sectionHeader.sectionId}}" data-toggle="collapse" aria-expanded="false" class="bg-dark list-group-item list-group-item-action flex-column align-items-start">
+						<a href="#{{sectionHeader.sbCollapseId}}" data-toggle="collapse" aria-expanded="false" class="bg-dark list-group-item list-group-item-action flex-column align-items-start">
 							<div class="d-flex w-100 justify-content-start align-items-center">
 								<span class="fa fa-dashboard fa-fw mr-3"></span> 
 								<span class="menu-collapsed pb-sidebar-section pb-section-title">{{sectionHeader.sectionTitle}}</span>
@@ -37,7 +37,7 @@
 	            		{% if arrSectionHeaders.size == 1 %}
 	            		
 		            		<!--this is collapsed-->
-	            			<div id={{sectionHeader.sectionId}} class="collapse sidebar-submenu">
+	            			<div id={{sectionHeader.sbCollapseId}} class="collapse sidebar-submenu">
 		            			
 			            		<!--go through each section-->
 		            			{% for sectionItem in arrSectionItems %}
@@ -64,7 +64,7 @@
 						{% else %}
 						
 							<!--this is collapsed-->
-	            			<div id={{sectionHeader.sectionId}} class="collapse sidebar-submenu">
+	            			<div id={{sectionHeader.sbCollapseId}} class="collapse sidebar-submenu">
 		            			
 	            				<!--go through each section-->
 								{% for thisSectionHeader in arrSectionHeaders %}
