adding cookiebot calls

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -2,6 +2,8 @@
 <html lang="en">
 
 <head>
+
+<script id="Cookiebot" src="https://consent.cookiebot.com/uc.js" data-cbid="8074f0b9-4a2f-485b-815a-da2819a048eb" type="text/javascript" async></script>
 	
 	<!-- Global site tag (gtag.js) - Google Analytics -->
 	<script async src="https://www.googletagmanager.com/gtag/js?id=UA-128159773-1"></script>
