--- a/_includes/foot.html
+++ b/_includes/foot.html
@@ -91,18 +91,7 @@
     </script>
 {% endif %}
 
-{% if site.analytics.account and site.analytics.domain %}
-    <script>
-        (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-        (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-        m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-        })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
-        ga('create', '{{site.analytics.account}}', '{{site.analytics.domain}}');
-        ga('send', 'pageview');
-    </script>
-{% endif %}
-
-<script>
+<script type="text/plain" data-cookieconsent="statistics">
     (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
     (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
     m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
