--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -147,16 +147,17 @@
 			
 		</div>
 		<!--end pb_homewrapper_content-->
+		
+		
 	</div>
 	<!--end wrapper-->
 	
-	<p></p>
-
-	{% include footer.html %}
 </div>
 <!--end homepage-->
     
-
+<div class="row">
+	{% include footer.html %}
+</div>
 
   <!-- Template Main Javascript File -->
   <script src="/assets/js/main.js"></script>
