--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -9,7 +9,13 @@
 	        <span class="icon-bar"></span>
 	        <span class="icon-bar"></span>
 	      </button>
+			
 		  <a class="navbar-brand" href="/index.html"><img src="/assets/images/logos/prebid_final.png"></a>
+		  
+		  <button type="button" id="sidebarCollapse" class="btn btn-secondary pb_menu_btn">
+			<i class="fas fa-align-left"></i>
+            <span>Menu</span>
+		  </button>
     	</div>
 		
 		<div id="navbar" class="navbar-collapse collapse">
